--- a/voxblox_ros/package.xml
+++ b/voxblox_ros/package.xml
@@ -26,4 +26,7 @@
   <depend>voxblox</depend>
   <depend>voxblox_msgs</depend>
   <depend>voxblox_rviz_plugin</depend>
+  
+  <depend>kalman</depend>
+  <depend>object_detection</depend>
 </package>
