--- a/zeus_pcl/CMakeLists.txt
+++ b/zeus_pcl/CMakeLists.txt
@@ -13,6 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_geometry_msgs
   tf2_ros
   roslint
+  pcl_conversions
+  pcl_ros
 )
 
 set(ROSLINT_CPP_OPTS "--filter=-legal, -build/c++11, -whitespace/indent, -whitespace/braces, -runtime/references, -readability/casting")
