--- a/kalman/package.xml
+++ b/kalman/package.xml
@@ -18,6 +18,7 @@
   <build_depend>geodesy</build_depend>
   <build_depend>zeus_pcl</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>libpcl-all</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -27,4 +28,5 @@
   <run_depend>tf2_geometry_msgs</run_depend>
   <run_depend>geodesy</run_depend>
   <run_depend>zeus_pcl</run_depend>
+  <run_depend>libpcl-all</run_depend>
 </package>
