--- a/zeus_pcl/package.xml
+++ b/zeus_pcl/package.xml
@@ -10,6 +10,7 @@
   <exec_depend>message_runtime</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>opencv3_catkin</build_depend>
   <build_depend>zeus_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
