--- a/zeus_pcl/CMakeLists.txt
+++ b/zeus_pcl/CMakeLists.txt
@@ -1,26 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(zeus_pcl)
-include("./config.cmake")
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  std_msgs
-  image_geometry
-  genmsg
-  nav_msgs
-  zeus_msgs
-  tf2
-  tf2_geometry_msgs
-  tf2_ros
-  roslint
-  pcl_conversions
-  pcl_ros
-)
+find_package(catkin_simple REQUIRED)
+catkin_simple(ALL_DEPS_REQUIRED)
 
 set(ROSLINT_CPP_OPTS "--filter=-legal, -build/c++11, -whitespace/indent, -whitespace/braces, -runtime/references, -readability/casting")
 roslint_cpp()
 
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV 3.4.19 REQUIRED)
 
 find_package(Boost REQUIRED COMPONENTS
     system
@@ -29,21 +16,19 @@ find_package(Boost REQUIRED COMPONENTS
 
 find_package(PkgConfig)
 
-catkin_package(
-INCLUDE_DIRS include
-LIBRARIES zeus_pcl
-)
-
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
 )
 
-add_library(zeus_pcl src/utils/zeus_pcl.cpp)
-target_link_libraries(zeus_pcl
+cs_add_library(zeus_pcl_lib
+    src/utils/zeus_pcl.cpp)
+target_link_libraries(zeus_pcl_lib
     ${catkin_LIBRARIES}
     ${OpenCV_LIBRARIES}
 )
+add_dependencies(zeus_pcl_lib zeus_msgs_generate_messages_cpp)
 
-add_dependencies(zeus_pcl zeus_msgs_generate_messages_cpp)
+cs_install()
+cs_export()
