--- a/kalman/CMakeLists.txt
+++ b/kalman/CMakeLists.txt
@@ -1,36 +1,16 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(kalman)
-include("./config.cmake")
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  geometry_msgs
-  nav_msgs
-  zeus_msgs
-  tf2
-  tf2_geometry_msgs
-  tf2_ros
-  tf
-  geodesy
-  zeus_pcl
-  roslint
-  pcl_conversions
-  pcl_ros
-)
+find_package(catkin_simple REQUIRED)
+catkin_simple(ALL_DEPS_REQUIRED)
 
 set(ROSLINT_CPP_OPTS "--filter=-legal, -build/c++11, -whitespace/indent, -whitespace/braces, -runtime/references, -readability/casting")
 roslint_cpp()
 
+find_package(OpenCV 3.4.19 REQUIRED)
+
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 find_package(PkgConfig REQUIRED)
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES kalman_lib
-  CATKIN_DEPENDS geometry_msgs roscpp std_msgs tf geodesy tf2_geometry_msgs
-)
 
 ###########
 ## Build ##
@@ -40,6 +20,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 set(KALMAN_UTILS_SRC
@@ -51,7 +32,10 @@ set(KALMAN_UTILS_SRC
   src/types/Pose2.cpp
 )
 
-add_library(kalman_lib
+cs_add_library(kalman_lib
     ${KALMAN_UTILS_SRC}
 )
-target_link_libraries(kalman_lib ${catkin_LIBRARIES} ${Boost_INCLUDE_DIRS})
+target_link_libraries(kalman_lib ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+
+cs_install()
+cs_export()
