--- a/kalman/package.xml
+++ b/kalman/package.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>kalman</name>
   <version>0.0.1</version>
   <description>This package includes classes for implementing a kalman filter with data association </description>
   <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
   <author>Keenan Burnett</author>
   <license>BSD</license>
+  
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>zeus_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>tf2_geometry_msgs</build_depend>
-  <build_depend>geodesy</build_depend>
-  <build_depend>zeus_pcl</build_depend>
-  <build_depend>roslint</build_depend>
-  <build_depend>libpcl-all</build_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>tf2_geometry_msgs</run_depend>
-  <run_depend>geodesy</run_depend>
-  <run_depend>zeus_pcl</run_depend>
-  <run_depend>libpcl-all</run_depend>
+  <buildtool_depend>catkin_simple</buildtool_depend>
+  
+  <depend>geometry_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>zeus_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>tf</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>geodesy</depend>
+  <depend>zeus_pcl</depend>
+  <depend>roslint</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
 </package>
