--- a/object_detection/package.xml
+++ b/object_detection/package.xml
@@ -1,33 +1,24 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>object_detection</name>
   <version>0.0.1</version>
   <description>The object_detection package</description>
   <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
   <author>Keenan Burnett</author>
   <license>BSD</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>zeus_msgs</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>kalman</build_depend>
-  <build_depend>zeus_pcl</build_depend>
-  <build_depend>roslint</build_depend>
-  <build_depend>libpcl-all</build_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>zeus_msgs</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>kalman</run_depend>
-  <run_depend>zeus_pcl</run_depend>
-  <!--run_depend>voxblox</run_depend-->
-  <!--run_depend>voxblox_ros</run_depend-->
-  <!--run_depend>voxblox_msgs</run_depend-->
-  <!--run_depend>voxblox_rviz_plugin</run_depend-->
-  <run_depend>libpcl-all</run_depend>
   
-  <export>
-  </export>
+  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin_simple</buildtool_depend>
+  
+  <depend>message_generation</depend>
+  <depend>roscpp</depend>
+  <depend>zeus_msgs</depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>kalman</depend>
+  <depend>zeus_pcl</depend>
+  <depend>roslint</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
+
 </package>
