Fix opencv dep issue and improve build speed

--- a/voxblox_ros/CMakeLists.txt
+++ b/voxblox_ros/CMakeLists.txt
@@ -4,10 +4,10 @@ project(voxblox_ros)
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
+add_compile_options(-std=c++14)
+
 set(CMAKE_CFG_PATH ${CMAKE_CURRENT_LIST_DIR}/../../Kimera-Semantics/kimera_semantics_ros/cfg)
 add_definitions(-DCFG_PATH="${CMAKE_CFG_PATH}")
-
-add_definitions(-std=c++14 -Wall -Wextra)
 
 #############
 # LIBRARIES #
@@ -16,45 +16,10 @@ cs_add_library(voxblox_ros_lib
   src/esdf_server.cc
   src/interactive_slider.cc
   src/simulation_server.cc
-  src/intensity_server.cc
   src/transformer.cc
   src/tsdf_server.cc
   src/pocd_tsdf_server.cc
 )
-
-############
-# BINARIES #
-############
-
-cs_add_executable(voxblox_eval
-  src/voxblox_eval.cc
-)
-target_link_libraries(voxblox_eval voxblox_ros_lib)
-
-cs_add_executable(tsdf_server
-  src/tsdf_server_node.cc
-)
-target_link_libraries(tsdf_server voxblox_ros_lib)
-
-cs_add_executable(esdf_server
-  src/esdf_server_node.cc
-)
-target_link_libraries(esdf_server voxblox_ros_lib)
-
-cs_add_executable(intensity_server
-  src/intensity_server_node.cc
-)
-target_link_libraries(intensity_server voxblox_ros_lib)
-
-cs_add_executable(simulation_eval
-  src/simulation_eval.cc
-)
-target_link_libraries(simulation_eval voxblox_ros_lib)
-
-cs_add_executable(visualize_tsdf
-  src/visualize_tsdf.cc
-)
-target_link_libraries(visualize_tsdf voxblox_ros_lib)
 
 ##########
 # EXPORT #
