--- a/kalman/CMakeLists.txt
+++ b/kalman/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(kalman)
 
+add_compile_options(-std=c++17)
+
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
